--- a/index.html
+++ b/index.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Quicksand">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
   <style>
   h1 {
-    font-family: verdana;
+    font-family: 'Quicksand', sans-serif;
+    font-weight:700;
     color: #dedede;
   }
   h2 {
-    font-family: verdana;
+    font-family: 'Quicksand', sans-serif;
+    font-weight:700;
     color: #dedede;
   }
   h3 {
-    font-family: verdana;
+    font-family: 'Quicksand', sans-serif;
+    font-weight:700;
     color: #dedede;
   }
   h4 {
-    font-family: verdana;
+    font-family: 'Quicksand', sans-serif;
+    font-weight:700;
     color: #dedede;
   }
   div {
@@ -27,6 +33,7 @@
 
  p {
   font-size: 18px;
+  font-family: 'Quicksand', sans-serif;
   color: #dedede;
   text-align: justify;
   text-justify: inter-word;
@@ -38,17 +45,20 @@ ul {
 }
 a:link {
   color: #29c294;
+  font-family: 'Quicksand', sans-serif;
   background-color: transparent;
   text-decoration: none;
 }
 
 a:visited {
   color: #29c294;
+  font-family: 'Quicksand', sans-serif;
   background-color: transparent;
   text-decoration: none;
 }
 
 a:hover {
+  font-family: 'Quicksand', sans-serif;
   color: #29c294;
   background-color: transparent;
   text-decoration: underline;
