--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@ img
           </div>
           <div class="col-12">
             <p>Rastrske PZS karte lahko najlažje kupite in uvozite v Locus aplikaciji. Za Orux te možnosti uradno ni, saj PZS ne prodaja samostojnega digitalnega izdelka izven Locus/Avenza trgovine. Več na uradni strani <a href="https://www.pzs.si/novice.php?pid=11929">PZS in Locus</a>.</p>
-            <p>Orux in Locus podpirata ročni uvoz, priporočljiv je format mbtiles v katerem so lahko spravljene tako vektorske kot rastrske (papirnate) karte - npr. GURS zemljevidov v merilu 1:50.000.
+            <p>Orux in Locus podpirata ročni uvoz, priporočljiv je format mbtiles - npr. GURS zemljevidov v merilu 1:50.000.
             </div>
             <div class="col-6">
               <h2 align="center">GURS 1:50.000</h2>
