--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@ img
               <h2 align="center">GURS 1:50.000</h2>
               <p>Topografska zbirka kart, ki jo (še vedno) vzdržuje Geodetska uprava Republike Slovenije (na voljo tudi v Avenzi). Posamezni listi, ki so kot odprti podatki na voljo na njihovi spletni strani so združeni v mbtiles formatu za celotno območje države v <a href="https://onedrive.live.com/download?cid=937E3238A29CB656&resid=937E3238A29CB656%2142549&authkey=AIxmrZ7xWTxx2ms">mojem oblaku</a>.</p>
               <img class="img-fluid" src="slike\gurs.jpg" height="600">
-              <p>Datoteko (3.5gb) shranite v mapo Oruxmaps/mapfiles/ ter osvežite seznam kart brez povezave. Za uporabo v Locus zgolj poiščite pot do shranjene datoteke. <a href="https://docs.locusmap.eu/doku.php?id=manual:user_guide:maps_external">Navodila</a>.<br> Veselo uporabo. <br>Nasvet: Avtomatski preklop med kartami izklopite v nastavitvah Globalne nastavitve - Karte - Nastavitev povečave - izkopite "Povečava pri avt. nalaganju."</p>
+              <p>Datoteko (3.5gb) shranite v mapo Oruxmaps/mapfiles/ ter osvežite seznam kart brez povezave. Za uporabo v Locus zgolj poiščite pot do shranjene datoteke ali uporabite <a href="https://docs.locusmap.eu/doku.php?id=manual:user_guide:maps_external">Navodila</a>.<br> Veselo uporabo. <br>Nasvet: Avtomatski preklop med kartami izklopite v nastavitvah Globalne nastavitve - Karte - Nastavitev povečave - izkopite "Povečava pri avt. nalaganju."</p>
             </div>
             <div class="col-6">
               <h2 align="center">Skenirane karte</h2>
