--- a/index.html
+++ b/index.html
@@ -83,13 +83,18 @@ img
         <h3 style="color: red" align="center"><i><b>Karta (digitalna ali papirnata) je pripomoček in ne slepa navigacija. Pri uporabi vedno uporabljate zdravo pamet in se ne podajajte v nevarne situacije.</b></i></h3>
         <br>
         <p>Planinskih/outdoor/aktivnih aplikacij je danes malo morje zato je odločitev o izbiri kar težka. Spodnji zapis je nastal na podlagi izkušenj zadnjega desetletja, predvsem z namenom gledanja karte, kartiranja nekaj sto lokacij sredi ničesar in uporabe lastnih zemljevidov v času, ko aplikacije še niso bile tako razvite kot danes.<br>
+        <img class="img-fluid" src="slike\grintavec.jpg">
+        <p>Papirnata planinska karta Sidarta Bovec 1:25.000</p>
           <br>
         </div>
         <!-- Uvod -->
         <div class="row">
           <div class="col-6">
             <h3>Prednosti uporabe digitalnih kart in aplikacij?</h3>
-            <p>Niso vse poti markirane planinske poti in seveda - niso vse aktivnosti planinske. Veliko vrhov nima markiranih planinskih poti, čeprav tja vodijo poti, ali celo grajene 2m široke mulatjere s predori. Včasih gremo tudi kam drugam kot na vrh in karta pride zelo prav na izletu okrog Snežnika, po Krasu ali npr. po Juliani. Kaj je prednost digitalne pred papirnato? Zoom, zoom, zoom. Večinoma so podatki zajeti v merilu 1:1000 in ne 25.000 ali celo 50.000 kot na papirju. GPS na papirju ne kaže lokacije in ni ga junaka, ki bo v megli sredi gozda na Javornikih jamčil na papirju za točnost lokacije. Nesreča ne počiva in takrat je lepo biti založen z vsem. Predvsem pa: karta je zgolj pripomoček, aplikacija še toliko bolj. Oči na pot, ne v zaslon.</p>
+            <p>Niso vse poti markirane planinske poti in seveda - niso vse aktivnosti planinske. Veliko vrhov nima markiranih planinskih poti, čeprav tja vodijo poti, ali celo grajene 2m široke mulatjere s predori. Včasih gremo tudi kam drugam kot na vrh in karta pride zelo prav na izletu okrog Snežnika, po Krasu ali npr. po Juliani. Kaj je prednost digitalne pred papirnato? Zoom, zoom, zoom. Večinoma so podatki zajeti v merilu 1:1000 in ne 25.000 ali celo 50.000 kot na papirju. GPS na papirju ne kaže lokacije in ni ga junaka, ki bo v megli sredi gozda na Javornikih jamčil na papirju za točnost lokacije. Nesreča ne počiva in takrat je lepo biti založen z vsem.</p>
+            <br>
+            <h3>Nakup kart v aplikaciji</h3>
+            <p>V premislek. Karte, ki jih kupite v Locus trgovini ne morete uvoziti v druge aplikacije. Z nastankom Outdooractive so kupci kart v View Ranger aplikaciji ostali brez svojih kart. </p>
           </div>
           <div class="col-6">
             <h3>PZS in ostali viri podatkov</h3>
@@ -184,7 +189,7 @@ img
         </div>
         <div class="col-12">
           <p>Kaj pa Outdooractive (bivši ViewRanger) in ostali načrtovalniki? Velika prednost naštetih je dostopnost tako za Android kot IOS naprave. Trenutno je verjetno najbolj priročna plačljiva aplikacija za načrtovanje aktivnosti (30€ na leto je nuja za offline zemljevide). Njihova karta je derivat iz OpenStreetMap podatkov, kar pomeni, da imamo v Oruxu iste podatke - zastonj. Njihov plan temelji na načrtovanju (višinski profili, izračun poti med točko A in B), itd. Za 60€ letno vam nudijo še dostop do kart planinskih organizacij OAV, DAV, KOMPASS, ADFC, Harvey ampak ne PZS. Za Slovenijo imajo karte 1:25.000 in sloj planinskih poti. <br> Bergfex? Že ime "Bergfex OSM" pove, da gre za isto stvar kot v oruxu/locusu/outdooractive. Bergfex v zastonjski različici prikazuje tudi topografske karte Avstrije ter nudi prenos izbranih območij. <br> Ortovox? Po novem del Outdooractive imperija.
-            <b>Seveda je paradni konj vseh aplikacij njihova galerija izletov in tur. </b></p>
+            <b>Seveda je paradni konj vseh aplikacij njihova galerija izletov in tur. </b>Hkrati je to tudi dvorezen meč - vsebina se drobi na več aplikacij ter tudi izgine, če aplikacija propade. Trud številnih posameznikov in organizacij je s tem šel v nič. </p>
             <img class="img-fluid" src="slike\outdoor1.jpg" height="600">
             <p>Outdooractive in podobni so z leti res dobro razvili sistem načrtovanja aktivnosti in razne drobnarije. Da se razume - so odlične aplikacije in preproste za uporabo ter dokaz, da so osnova digitalne revolucije podatki. Danes se ne prodaja več aplikacij ampak storitve. Vsi uporabljajo isti vir ter izkušnjo gradijo na drugih funkcionalnostih. Ena izmed boljših funkcionalnosti je hitro kopiranje koordinat ali uvedba <a href="https://what3words.com/how-to">w3w sistema</a> hitrega sporočanja lokacije (rabi prenos podatkov).</p>
             <img class="img-fluid" src="slike\bergfex.jpg" height="600">
