--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@ img
             <p>Velika večina aplikacij nudi enake reči in so razlike predvsem v uporabniški izkušnji ter državi, ki jih aplikacija "favorizira" z vsebino. Nove aplikacije želijo uporabnike pritegniti predvsem z načrtovanjem, iskanjem tur, nekaj v smislu "prodajaj aktivni življenski slog, ne kartografske aplikacije"...skratka piko na i, ki jo seveda računajo, saj vse te funkcionalnosti zahtevajo strežniško infrastrukturo in vojsko razvijalcev.</p>
             <p>Zaradi lažje primerjave se bomo osredotočili predvsem na to, kar (zelo subjektivno) pomeni največ - karta, orodja, ki olajšajo naše odločitve ter potešijo radovednost koliko smo oddaljeni do naslednje točke. </p>
 
+            <h3>Galerija izletov?</h3>
+          <p>Kot je omenjeno večina aplikacij uporablja <b>isti</b> kartografski vir podatkov (OSM). Pri naboru izletov/pohodov ni vira vhodnih podatkov, saj je vsaka aplikacija svet zase. Mapy.cz, OutdoorActive, Bergfex, Komoot, Slovenia trails, Fatmap, Locus, ... Namesto enega vira kvalitetnih poti, ki jih ureja skupnost (tako kot OSM podatke) imamo cel kup razdrobljenih podatkov, ki jih večinoma nihče ne vzdržuje ali ureja.</p>
+
           <h3>Dvojezičnost?</h3>
           <p>Vektorske zbirke zemljevidov (Mapsforge) vsebujejo bazo podatkov (db) in zapis prikaza. Ker OSM podpira večjezične zapise pomeni, da lahko izberemo poljuben jezik prikaza podatkov. Napisi na karti bodo tako primarno prikazani v slovenščini (če slovensko ime obstaja). Te funkcionalnosti številne aplikacije nimajo.</p>
           <img class="img-fluid" src="slike\jezik.jpg">
